[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "crewai[litellm]>=1.15.2",
    "ddgs>=9.14.4",
    "fastembed>=0.8.0",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
